patchage (1.0.9) unstable; urgency=medium

  * Upgrade to fmt 9.0.0

 -- David Robillard <d@drobilla.net>  Tue, 16 Aug 2022 20:36:01 +0000

patchage (1.0.8) stable; urgency=medium

  * Switch to C++17 and modernize code
  * Switch to meson build system

 -- David Robillard <d@drobilla.net>  Sat, 13 Aug 2022 22:15:26 +0000

patchage (1.0.6) stable; urgency=medium

  * Fix ALSA sequencer port subscriptions
  * Fix crash on client disconnection
  * Fix initial display with no configuration file
  * Fix various minor bugs
  * Rework code architecture to be more decoupled and data-driven
  * Save "human names" setting in configuration
  * Show latency in toolbar with 2 decimal places
  * Switch to C++14

 -- David Robillard <d@drobilla.net>  Fri, 27 May 2022 03:08:31 +0000

patchage (1.0.4) stable; urgency=medium

  * Add NSMicrophoneUsageDescription for MacOS 10.15 Catalina
  * Add command line option to print version
  * Fix making and breaking connections with Jack DBus
  * Fix sample rate with Jack DBus
  * Fix unstable module positions
  * Improve man page
  * Remove Jack session support
  * Remove flaky DSP load meter

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 21:59:02 +0000

patchage (1.0.2) stable; urgency=medium

  * Add support for exporting canvas as PDF
  * Bring back Jack buffer size selector
  * Configure based on compiler target OS for cross-compilation
  * Don't install 512x512 icons
  * Fix compilation with Jack DBus
  * Order ports deterministically
  * Restore messages pane visibility and height
  * Save window size and position when closed via window manager
  * Style messages pane to match canvas
  * Support Jack CV and OSC via metadata
  * Upgrade to waf 2.0.19

 -- David Robillard <d@drobilla.net>  Thu, 09 Apr 2020 12:29:59 +0000

patchage (1.0.0) stable; urgency=medium

  * Allow removing connections by selecting their handle and pressing delete
  * Fix font configuration on OSX
  * Integrate with Mac menu bar on OSX