@@ -9,7 +9,7 @@
 #include "Setting.hpp"
 #include "SignalDirection.hpp"
 
-#include <boost/variant/variant.hpp>
+#include <variant>
 
 namespace patchage {
 namespace action {
@@ -68,22 +68,22 @@ struct ZoomOut {};
 } // namespace action
 
 /// A high-level action from the user
-using Action = boost::variant<action::ChangeSetting,
-                              action::ConnectPorts,
-                              action::DecreaseFontSize,
-                              action::DisconnectClient,
-                              action::DisconnectPort,
-                              action::DisconnectPorts,
-                              action::IncreaseFontSize,
-                              action::MoveModule,
-                              action::Refresh,
-                              action::ResetFontSize,
-                              action::SplitModule,
-                              action::UnsplitModule,
-                              action::ZoomFull,
-                              action::ZoomIn,
-                              action::ZoomNormal,
-                              action::ZoomOut>;
+using Action = std::variant<action::ChangeSetting,
+                            action::ConnectPorts,
+                            action::DecreaseFontSize,
+                            action::DisconnectClient,
+                            action::DisconnectPort,
+                            action::DisconnectPorts,
+                            action::IncreaseFontSize,
+                            action::MoveModule,
+                            action::Refresh,
+                            action::ResetFontSize,
+                            action::SplitModule,
+                            action::UnsplitModule,
+                            action::ZoomFull,
+                            action::ZoomIn,
+                            action::ZoomNormal,
+                            action::ZoomOut>;
 
 } // namespace patchage
 
